--- a/.deliver/config
+++ b/.deliver/config
@@ -28,7 +28,7 @@ pre_erlang_get_and_update_deps() {
 }
 
 pre_erlang_clean_compile() {
-  status "Running phoenix.digest" # log output prepended with "----->"
+  status "Running phx.digest" # log output prepended with "----->"
   __sync_remote " # runs the commands on the build host
     # [ -f ~/.profile ] && source ~/.profile # load profile (optional)
     source ~/.profile
@@ -37,11 +37,8 @@ pre_erlang_clean_compile() {
     cd '$BUILD_AT' # enter the build directory on the build host (required)
     # prepare something
     mkdir -p priv/static # required by the phoenix.digest task
-    npm install 
-
-    ./node_modules/brunch/bin/brunch build --production 
-
-    # run your custom task
+    ( cd assets && npm install && ./node_modules/brunch/bin/brunch build --production )
+# run your custom task
     APP='$APP' MIX_ENV='$TARGET_MIX_ENV' $MIX_CMD phx.digest $SILENCE
   "
 }
